--- a/chatbot.html
+++ b/chatbot.html
@@ -120,7 +120,7 @@ document.addEventListener('DOMContentLoaded', function () {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
-        'x-goog-api-key': 'AIzaSyDeH8BUqSp4Rw2TMaKrmfW9YFKFPoP_9sw' // Replace with your actual Gemini API key
+        'x-goog-api-key': 'GEMINI_API_KEY' // Replace with your actual Gemini API key
       },
       body: JSON.stringify({
         contents: [{
